[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Marujo.ttf" type="FontFile" id=1]
[ext_resource path="res://Assets/Images/btn_yellow_disabled.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Images/btn_yellow.png" type="Texture2D" id=3]
[ext_resource path="res://Scenes/Utility/Win/Win.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/btnFont.tres" type="FontFile" id=5]

[sub_resource type="FontFile" id=1]
size = 250
outline_size = 8
outline_color = Color( 0.243137, 0.788235, 0.101961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=2]
size = 68
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 68
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Win" type="Node2D"]
z_index = 200
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 3200.0
offset_bottom = 1800.0
color = Color( 0, 0, 0, 0.392157 )

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 3200.0
offset_bottom = 1800.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer"]
offset_top = 594.0
offset_right = 3200.0
offset_bottom = 845.0
theme_override_fonts/font = SubResource( 1 )
text = "¡GANASTE!"
align = 1
valign = 1

[node name="LblPuntuacion" type="Label" parent="CenterContainer"]
offset_top = 849.0
offset_right = 3200.0
offset_bottom = 928.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource( 5 )
text = "PUNTUACIÓN: 0"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
offset_top = 932.0
offset_right = 3200.0
offset_bottom = 1205.0
alignment = 1

[node name="BtnTry" type="TextureButton" parent="CenterContainer/HBoxContainer"]
offset_left = 1108.0
offset_right = 1598.0
offset_bottom = 273.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/BtnTry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.5
offset_top = -39.5
offset_right = 178.5
offset_bottom = 39.5
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource( 2 )
text = "REINTENTAR"
align = 1
valign = 1

[node name="BtnMenu" type="TextureButton" parent="CenterContainer/HBoxContainer"]
offset_left = 1602.0
offset_right = 2092.0
offset_bottom = 273.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/BtnMenu"]
offset_left = 66.0
offset_top = 97.0
offset_right = 423.0
offset_bottom = 176.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource( 3 )
text = "MENÚ"
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/HBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
